--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <div class="card">
         <img src="images/Almahal-logo.png" alt="">
         <h1>مَحْمَصة المَحْلّ</h1>
-        <h3>Hama, Syrian Arab Republic</h3>
+        <!-- <h3>Hama, Syrian Arab Republic</h3> -->
         <q>نَنْسِجُ كُلَّ شيءٍ بِحُب</q>
         <div class="links">
-            <a href="tel:01100566987" target="_blank">WhatsApp</a>
+            <a href="https://wa.me/201091238275" target="_blank">WhatsApp</a>
             <a href="https://www.facebook.com/profile.php?id=61563868119482" target="_blank">Facebook</a>
+            <a href="tel:01100566987" target="_blank">Phone</a>
             <a href="https://www.instagram.com/almahal_roastery/" target="_blank">Instagram</a>
         </div>
 
